--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+        </profile>
+        <profile>
+            <id>udemyHibernate</id>
+        </profile>
+    </profiles>
 </project>
