--- a/springboot/src/main/resources/application.yml
+++ b/springboot/src/main/resources/application.yml
@@ -1,3 +1,15 @@
 server:
   port: 9093
 #  port jenkins!! 8099
+
+
+spring:
+  profiles:
+    active: "dev"
+---
+spring:
+  profiles: "dev"
+
+---
+spring:
+  profiles: "udemyHibernate"
