--- a/springboot/src/main/resources/application.yml
+++ b/springboot/src/main/resources/application.yml
@@ -16,7 +16,16 @@ spring:
       maximum-pool-size: 5
   profiles:
     active: @active.profile@
-
+  jpa:
+    properties:
+      hibernate:
+        jdbc:
+#          batch_size: 5 #batch size here would affect every entitymanager
+          order_inserts: true
+          order_updates: true
+          batch_versioned_data: true
+          new_generator_mappings: true
+          reWriteBatchedInserts: true
 ---
 spring:
   profiles: "dev"
@@ -41,3 +50,9 @@ logging:
       springframework:
         transaction:
           interceptor: trace
+      hibernate:
+        engine:
+          jdbc:
+            batch:
+              internal:
+                BatchingBatch: debug #to log if batching is working
